# all-in-one

./: .gitignore  MyApp.spec  README.md  agents.md  main.py  pyproject.toml  ui_components_test.py
UIComponents/: README.md  __init__.py
UIComponents/backgrounds/: __init__.py  aurora.py  background_stack.py  grid3d.py  particles.py  stack.py  starfield.py  vignette.py
UIComponents/cards/: __init__.py  info_card.py  media_card.py  message_bubble.py  message_bubbles.py  message_card.py  profile_card.py  stat_card.py  timeline_card.py
UIComponents/core/: __init__.py  assets.py  glass_panel.py  motion.py  styles.py  theme.py  tokens.py
UIComponents/demo/: __init__.py  gallery.py  layout.py  presets.py  run_gallery.py
UIComponents/forms/: __init__.py  field_row.py  form_shell.py  validation_hint.py
UIComponents/layouts/: __init__.py  app_shell.py  grid.py  messages.py  section.py  sidebar.py  split_pane.py  topbar.py
UIComponents/primitives/: __init__.py  badge.py  button.py  empty_state.py  glass_panel.py  icon.py  input.py  modal.py  neon_divider.py  progress.py  spinner.py  table.py  tabs.py  text.py  toast.py  toggle.py  tooltip.py
projects/: agent-train.md  login.md  ui-components.md  unitTests.md
src/: agent_train.py  auth.py  contacts.py  firebase.py  logic.py  login.py  main.py  messages.py  session.py  session_store.py  user_training.py
src/login_project.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  (+1 more)
tests/: conftest.py  test_agent_train.py  test_auth.py  test_firebase.py  test_login.py  test_messages.py  test_session.py  test_user_training.py
